--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -116,7 +116,7 @@ Let \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{Unif}(0, \theta)\), where \(\t
     %     = \mathrm{Pr} \big( X_1 \le y \cap \cdots \cap X_n \le y \big)
     %     = \prod_{i = 1}^n F_i(y) = \left( \frac{y}{\theta} \right)^n
     % \end{align*}
-    \item[(b)] Naturally, since we must have \(y \le \theta\), it is natural that \(Y\) will underestimate \(\theta\), and is therefore biased. We have 
+    \item[(b)] Since we must have \(y \le \theta\), it is natural that \(Y\) will underestimate \(\theta\), and is therefore biased. We have 
     \begin{align*}
         \mathbb{E}[Y]
         = \int_{0}^{\theta} y \cdot \frac{n y^{n-1}}{\theta^n} \,\partial y
