--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -134,6 +134,10 @@ Let \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{Unif}(0, \theta)\), where \(\t
 
 %' ============================================================================================================================================================
 \section{Question 12} \noindent
+Suppose that \(X \sim \mathrm{P}\), where \(\mathrm{P}\) is an unknown distribution, and we want to test \(H_0: \mathrm{P} = \mathrm{Unif}(0,1)\) against 
+\(H_1: \mathrm{P} = \mathrm{N}(0, 1)\). The densities of both distributions (within their support) are given by \(f_0(x) = 1\) for \(x \in [0,1]\) and 
+\(f_2(x) = (2\pi)^{-1/2}\mathrm{exp}(-x^2 / 2)\), respectively, and so our test statistics is 
 
+%Determine the most powerful test of size 0.01, and calculate the power of the test when H1 is true.
 
 \end{document}
