fixed typo in q10

--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -65,7 +65,7 @@ loop in \texttt{R} to solve for it, and when \(\gamma = 0.9\), we find that \(n 
 %' ============================================================================================================================================================
 \section{Question 10} \noindent
 Let \(\bm{X} \overset{\mathrm{iid}}{\sim} \mathrm{N}(\theta, \sigma^2)\), where \(\theta\) is unknown and \(\sigma^2\) is known, and we assume prior that 
-\(\theta \sim \mathrm{N}(\mu, \nu^2\), where both \(\mu\) and \(\nu^2\) are known. 
+\(\theta \sim \mathrm{N}(\mu, \nu^2)\), where both \(\mu\) and \(\nu^2\) are known. 
 \begin{itemize}
     \item[(a)] Since normal distributions are are conjugate to normal sampling, it follows
     that \(\theta \,|\, \mathbf{x} \sim \mathrm{N}(\tilde{\mu}, \tilde{\sigma}^2)\), where 
