--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -74,7 +74,7 @@ It can then be shown that a \(100\gamma\)\%{} confidence interval for \(\hat{p}\
     ~ \right),
 \end{align*}
 where \(\zgam = \Phi^{-1}((1 + \gamma)/2)\). For this example, we have \(n = 300\) and \(\hat{p} = 75 / 300 = 1/4\), and to get a \(90\)\%{}
-confidence interval, we have \(z_{0.90} = \). Therefore, a \(90\)\%{} confidence interval for \(p\) is 
+confidence interval, we have \(z_{0.90} = 1.645\). Therefore, a \(90\)\%{} confidence interval for \(p\) is \((0.212, 0.294)\).
 
 %' ============================================================================================================================================================
 \section{Question 9} \noindent
