--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -106,9 +106,9 @@ reject \(H_0\) if \(X \le 3\). That is, our rejection region is \(\mathcal{S}_X 
 
 %' ============================================================================================================================================================
 \section{Question 6} \noindent
-\begin{wrapfigure}{r}{0.5\textwidth}
+\begin{wrapfigure}{r}{0.45\textwidth}
     \centering
-    \includegraphics[width = 0.45\textwidth]{img/q06-power-function.png}
+    \includegraphics[width = 0.4\textwidth]{img/q06-power-function.png}
     \caption{The power function \(\pi(\theta \,|\, \delta)\).}
     \label{q06-power-function}
 \end{wrapfigure}
@@ -130,7 +130,8 @@ variables, our test statistic is also a Poisson random variable, namely \(Y \sim
 A graph of \(\pi(\theta\,|\,\delta)\) can be found in Figure \ref{q06-power-function}.
 % , where we can see the maximum value occurs as \(\theta \to 0\). 
 The values of \(\pi(\theta\,|\,\delta)\) when \(\theta = \{1/2,1/3,1/4,1/6,1/12\}\) are given by 
-\(0.062, 0.238, 0.423, 0.677, 0.920\), and have also been marked on Figure \ref{q06-power-function}.
+\(0.062, 0.238, 0.423, 0.677, 0.920\), respectively, and have also been marked on Figure \ref{q06-power-function}.
+The significance of this test is given by \(\alpha(\delta) = \pi(1/2 \,|\, \delta) = 0.062\).
 
 %' ============================================================================================================================================================
 \section{Question 9} \noindent
