--- a/hwk/hwk02/hwk02-ans.tex
+++ b/hwk/hwk02/hwk02-ans.tex
@@ -102,7 +102,57 @@ reject \(H_0\) if \(X \le 3\). That is, our rejection region is \(\mathcal{S}_X 
 
 %' ============================================================================================================================================================
 \section{Question 5} \noindent
-
+Suppose \(X_1, X_2 \overset{\mathrm{iid}}{\sim} \mathrm{Exp}(1/\theta)\), where \(\theta > 0\), which means \(\mathbb{E}[X_i] = \theta\) and \(\mathrm{Var}[X_i] = \theta^2\). 
+The joint density is 
+\begin{align*}
+    f_{\bm{X}}(\mathbf{x}) 
+    = \frac{\mathrm{e}^{-x_1/\theta}}{\theta} \cdot \frac{\mathrm{e}^{-x_2/\theta}}{\theta}
+    = \frac{\mathrm{e}^{-(x_1 + x_2)/\theta}}{\theta^2}
+    % = \frac{\mathrm{exp}(-(x_1 + x_2)/\theta)}{\theta^2}
+\end{align*}
+Consider the transformation \(Y_1 = X_1 + X_2\) and \(Y_2 = X_2\), which implies \(Y_1 \sim \mathrm{Gamma}(2, 1/\theta)\) and \(Y_2 \sim \mathrm{Exp}(1/\theta)\).
+We note that because \(f_{\bm{X}}(\mathbf{x})\), which is also the likelihood function of the random sample, is a function of \(y_1\) and \(\theta\), so it is
+a sufficinet statistic. 
+In vector notation, the transformation is given by \(\bm{Y} = \mathbf{A} \bm{X}\), where \(\mathbf{A} = \left[ \begin{smallmatrix}
+    1 & 1 \\ 0 & 1
+\end{smallmatrix} \right]\), and so \(\bm{X} = \mathbf{A}^{-1}\bm{Y}\), where \(\mathbf{A}^{-1} = \left[ \begin{smallmatrix}
+    1 & -1 \\ 0 & 1
+\end{smallmatrix} \right]\). Therefore, the joint density of \(Y_1\) and \(Y_2\) is 
+\begin{align*}
+    g_{\bm{Y}}(\mathbf{y}) 
+    = f_{\bm{X}} \big( \mathbf{x} \big) \cdot \left| \,\mathrm{det} \left( \frac{\partial \mathbf{A} \mathbf{x}}{\partial \mathbf{x}} \right) \right|
+    = f_{\bm{X}} \big( \mathbf{A}^{-1}\mathbf{y} \big) \cdot \left| \,\mathrm{det} \left( \mathbf{A} \right) \right|
+    = \frac{\mathrm{e}^{-(y_1 - y_2 + y_2)/\theta}}{\theta^2} \cdot 1
+    = \frac{\mathrm{e}^{-y_1/\theta}}{\theta^2},
+\end{align*}
+for \(0 < y_2 < y_1\). 
+Because \(Y_2 \sim \mathrm{Exp}(1/\theta)\), we have \(\mathbb{E}[Y_2] = \theta\), and so \(Y_2\) is an unbiased estimator for \(\theta\). 
+The conditional density of \(Y_2\) given \(Y_1\) is 
+\begin{align*}
+    g_{Y_2|Y_1}(y_2 \,|\, y_1)
+    = \frac{g_{\bm{Y}(\mathbf{y})}}{g_{Y_1}(y_1)}
+    = \frac{\mathrm{e}^{-y_1/\theta} / \theta^2}{y_1 \mathrm{e}^{-y_1/\theta}}
+    = \frac{1}{y_1},
+\end{align*}
+and so the conditional expectation of \(Y_2\) given \(Y_1\) is 
+\begin{align*}
+    \mathbb{E}[Y_2 \,|\, y_1] 
+    = \int y_2 \cdot g_{Y_2|Y_1}(y_2 \,|\, y_1) \;\partial y_2
+    = \int_0^{y_1} \frac{y_2}{y_1} \;\partial y_2
+    = \frac{y_2^2}{2 y_1} \bigg|_0^{y_1}
+    = \frac{y_1}{2}
+    \coloneqq \varphi(y_1).
+\end{align*}
+As is standard, we can define the random variable \(\varphi(Y_1)\), and immediately see that \(\mathbb{E}[\varphi(Y_1)] = \mathbb{E}[Y_2] = \theta\). 
+In addition, we have 
+\begin{align*}
+    \mathbb{E}[\varphi(Y_1)^2]
+    = \int \varphi(y_1)^2 \cdot g_{Y_1}(y_1) \;\partial y_1
+    = \int_0^{\infty} \frac{y_1^2}{4} \cdot \frac{y_1 \mathrm{e}^{- y_1 / \theta}}{\theta^2}
+    = \frac{3\theta^2}{2} \int_0^{\infty} \frac{y_1^{4 - 1} \cdot \mathrm{e}^{- y_1 / \theta}}{\theta^4 \Gamma(4)} \;\partial y_1
+    = \frac{3\theta^2}{2},
+\end{align*}
+and so \(\mathrm{Var}[\varphi(Y_1)] = \mathbb{E}[\varphi(Y_1)^2] - \mathbb{E}[\varphi(Y_1)]^2 = \theta^2 / 2\). 
 
 %' ============================================================================================================================================================
 \section{Question 6} \noindent
@@ -121,12 +171,12 @@ variables, our test statistic is also a Poisson random variable, namely \(Y \sim
     = \mathrm{Pr}(Y \in \mathcal{S}_Y \,|\, \theta)
     = \sum_{k=0}^2 \frac{(n\theta)^k \mathrm{e}^{-n\theta}}{k!}.
 \end{align*}
-% \begin{wrapfigure}{R}{0.5\textwidth}
+% \begin{figure}
 %     \centering
 %     \includegraphics[width = 0.45\textwidth]{img/q06-power-function.png}
 %     \caption{The power function \(\pi(\theta \,|\, \delta)\).}
 %     \label{q06-power-function}
-% \end{wrapfigure}
+% \end{figure}
 A graph of \(\pi(\theta\,|\,\delta)\) can be found in Figure \ref{q06-power-function}.
 % , where we can see the maximum value occurs as \(\theta \to 0\). 
 The values of \(\pi(\theta\,|\,\delta)\) when \(\theta = \{1/2,1/3,1/4,1/6,1/12\}\) are given by 
